replaced link with youtube video and added change to deal with cors error

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+
 <html lang="en">
+	
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.ico" />
@@ -14,3 +16,4 @@
 		<script type="module" src="/src/index.jsx"></script>
 	</body>
 </html>
+<script src="http://www.youtube.com/player_api"></script>
